# SyntaxForest

./: .gitignore  Cargo.toml  README.md  test.c
src/: lib.rs  main.rs
src/db/: mod.rs
src/method/: goto_definition.rs  initialize.rs  mod.rs  shutdown.rs
src/syntax/: c.rs  mod.rs
src/utils/: path.rs
tests/: integration_test.rs
tests/common/: asset.rs  lsp_client.rs  mod.rs
tests/sample/: test.c
