[package]
name = "syntax_forest"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tree-sitter = "0.22.6"
tree-sitter-c = "0.21.3"
