[package]
name = "syntax_forest"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
clap = { version = "4.5.4", features = ["default", "std", "color", "derive"] }
ignore = "0.4.22"
lsp-server = "0.7.6"
lsp-types = "=0.95.0"
regex = "1.10.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.18"
tree-sitter = "0.22.6"
tree-sitter-c = "0.21.3"
